--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -35,4 +35,6 @@ jobs:
         uses: anothrNick/github-tag-action@1.34.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
+          INITIAL_VERSION: 1.0.0
           WITH_V: true
