--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,4 +1,4 @@
-name: Deployment Pipeline
+name: Deployment pipeline
 
 on:
   push:
@@ -9,12 +9,40 @@ on:
     types: [opened, synchronize]
 
 jobs:
-  simple_deployment_pipeline:
-    if: ${{ github.event_name == 'push'}}
-    runs-on: ubuntu-latest
+  build_test_pipeline:
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12
+          with:
+            fetch-depth: '0'
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "12.x"
+      - name: npm install
+        run: npm install
+      - name: lint
+        run: npm run eslint
+      - name: build
+        run: npm run build
+      - name: test
+        run: npm run test
+      # ****End to end Testing***** #
+      # - name: e2e tests
+      #   uses: cypress-io/github-action@v2
+      #   with:
+      #     command: npm run test:e2e
+      #     start: npm run start-prod
+      #     wait-on: http://localhost:5000
+      - name: Bump version and push tag
+        if: ${{ github.event_name == 'push' && !contains( join(github.event.commits.*.message,','),'#skip') }}
+        uses: anothrNick/github-tag-action@1.33.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          WITH_V: true
+          DEFAULT_BUMP: patch
+      - name: heroku push
+        if: ${{ github.event_name == 'push' && !contains( join(github.event.commits.*.message,','),'#skip') }}
+        uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "boiling-bayou-74705" #Must be unique in Heroku
@@ -22,19 +50,4 @@ jobs:
           healthcheck: "https://boiling-bayou-74705.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
-      - uses: actions/setup-node@v1
-        with:
-          node-version: '14.x'
-      - name: npm install
-        run: npm install
-      - name: lint
-        run: npm run eslint
-      - name: test
-        run: npm test
-      - name: Github Tag Bump
-        uses: anothrNick/github-tag-action@1.34.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: patch
-          INITIAL_VERSION: 1.0.0
-          WITH_V: true
+
